--- a/assets/style.css
+++ b/assets/style.css
@@ -118,6 +118,14 @@ nav .icon-burger .line {
 	}
 	
 }
+
+body{
+	background-color: rgb(248, 240, 240);
+	font-family: 'Times New Roman', Times, serif;
+}
+
+
+
 /*hero image rick and morty image from free images online, reusing image button and ufo png i used on power cosmic website i was making information learned from code institute w3 schools you tube tutorials*/
 .hero-image {
     background-image: url(/assets/images/rick-and-morty-background-jurokoo-deviantart-19.jpg);
@@ -210,12 +218,14 @@ ul li {
     font-size: 150%;
     color:rgb(244, 238, 238);
 }
+
+
 /*looked at codepen to help with css social media icons https://codepen.io/vishalamipara/pen/ZEYZVvr*/
 .social-icons{
 	padding:28px;
 	background-color: #1cb9ed;
 	text-align: center;
-	
+
 }
 .social-icons a{
 	color: rgb(244, 240, 240);
