--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ html{
 
 body {
     background-image: url("/assets/images/rick-and-morty-background-jurokoo-deviantart-19.jpg");
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     background-position: center;
@@ -52,9 +52,12 @@ nav .links a {
 	display: block;
 	padding: 1em;
 	font-size: 18px;
-	
 	color: black;
 	text-decoration: none;
+}
+
+nav .link a:hover {
+	color: brown;
 }
 #nav-toggle {
 	position: absolute;
@@ -119,16 +122,13 @@ nav .icon-burger .line {
 	
 }
 
-body{
-	background-color: rgb(248, 240, 240);
-	font-family: 'Times New Roman', Times, serif;
-}
 
 .container {
 	display: flex;
 	width: 900px;
 	height: auto;
-	margin: 29px auto;
+	margin: 750px auto;
+	margin-bottom: 30px;
 }
 
 .box{
@@ -152,13 +152,16 @@ img{
 	border-top-right-radius: 10px;
 
 }
-h3,p{
+
+.container-headings{
 	text-align: center;
-	color: rgb(106, 104, 104);
+	font-size: 25px;
+	color: brown;
+	background-color: white;
 }
-p{
-	font-size: 14px;
-	padding: 0 5px;
+.container-text{
+	text-align: center;
+	background-color: white;
 
 }
 @media (max-width: 800px){
