--- a/assets/contact.css
+++ b/assets/contact.css
@@ -3,4 +3,11 @@ body{
     margin: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(96, 236, 236);
+    background-color: rgb(239, 228, 228);
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:0 25px;
 }
