--- a/assets/contact.css
+++ b/assets/contact.css
@@ -160,8 +160,9 @@ font-size: 20px;
     resize: vertical;
   }
 
-  input:hover {
-    color: #f1be16;
+  input:hover {    
+    background-color: #f1be16;
+    transition: 0s;
   }
   
   label {
