--- a/assets/contact.css
+++ b/assets/contact.css
@@ -165,10 +165,7 @@ font-size: 20px;
     transition: 0s;
   }
   
-  label {
-    padding: 13px 13px 12px 0;
-    display: inline-block;
-  }
+ 
   
   input[type=submit] {
     background-color: #17e19e;
@@ -185,14 +182,13 @@ font-size: 20px;
   
   .container {
     border-radius: 6px;
-    background-color:  #f2f2f2;
+    background-color:  transparent;
     padding: 21px;
-    margin-top: 130px;
-    width: 80%;
+    margin-top: 105px;
+    width: 60%;
     align-content: center;
-    justify-content: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 15%;
+    margin-right: 15%;
     
   }
   
