--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,6 @@ html{
 body {
     background-image: url("/assets/images/rick-and-morty-background-jurokoo-deviantart-19.jpg");
     background-repeat: no-repeat;
-    
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -55,8 +54,9 @@ nav .links a {
 	text-decoration: none;
 }
 
-nav .link a:hover {
-	color: brown;
+nav .links a:hover {
+	color: rgb(61, 43, 226);
+	font-size: 19px;
 }
 #nav-toggle {
 	position: absolute;
@@ -120,6 +120,23 @@ nav .icon-burger .line {
 	}
 	
 }
+/*Navbar-Ends*/
+
+.cards-heading{
+	text-align: center;
+	color: black;
+	font-size: 26px;
+	margin-top: 0px;
+}
+
+.cards-divider{
+	width: 25%;
+	background-color: rgb(61, 43, 226);
+	height: 6px;
+	border-radius: 20px;
+	margin-bottom: 30px;
+}
+
 
 
 .container {
@@ -134,7 +151,6 @@ nav .icon-burger .line {
 .box{
 	width: 31%;
 	height: auto;
-	border: 1px solid rgb(222, 219, 219);
 	margin-right: 1%;
     background: white;
 	border-radius: 10px;
@@ -210,10 +226,11 @@ img{
 }
 
 .hero-button:hover{
-	background-color: brown;
-	color: whitesmoke;
+	background-color: rgb(61, 43, 226);
+	color: rgb(235, 221, 221);
 	text-decoration: none;
 	border-bottom: none;
+	font-size: 18px;
 
 }
 
