added new button to index for hero image and also chnaged form stles and tried different colors etc

--- a/assets/about.css
+++ b/assets/about.css
@@ -55,8 +55,9 @@ nav .links a {
 	text-decoration: none;
 }
 
-nav .link a:hover {
-	color: brown;
+nav .links a:hover {
+	color: rgb(61, 43, 226);
+	font-size: 19px;
 }
 #nav-toggle {
 	position: absolute;
