--- a/assets/about.css
+++ b/assets/about.css
@@ -4,7 +4,6 @@ html{
 }
 
 body {
-    background-image: url("/assets/images/about-background.jpg");
     background-repeat: repeat;
     background-position: center;
     -webkit-background-size: cover;
@@ -20,7 +19,6 @@ nav {
 	left: 0;
 	right: 0;
 	top: 0;
-	
 	padding: 0 5%;
 	height: 100px;
 	background-color: rgb(244, 238, 238);
@@ -125,11 +123,11 @@ nav .icon-burger .line {
 /*---------------------------------------------------------------------------------style for footer*/
 footer{
     height: 10px;
-    background-color: rgb(222, 219, 219);
+    background-color: rgb(248, 221, 221);
         bottom: 0;
         width: 100%;
         margin-bottom: 0%;
-        padding:28px;
+        padding:27px;
         text-align: center;
         align-items: center;
         word-spacing: 40px;
@@ -159,50 +157,133 @@ footer{
     
     }
     
-    /*used their scales for webkit transition etc*/
-    
-    
-    .fa-facebook-square{
-        color: blue;
-        
-    }
-    
-    .fa-facebook-square:hover{
-        font-size: 35px;
-        color: black;
-    }
-    
-    .fa-youtube-square{
-        color: red;
-    }
-    
-    .fa-youtube-square:hover{
-        font-size: 35px;
-        color: black;
-    }
-    
-    .fa-twitter-square{
-        color: rgb(0, 234, 255);
-    }
-    
-    .fa-twitter-square:hover{
-        font-size: 35px;
-        color: black;
-    }
-    .fa-instagram{
-        color: purple;
-    }
-    
-    .fa-instagram:hover{
-        font-size: 35px;
-        color: black;
-    }
-    
-    .fa-pinterest-p{
-        color: green;
-    }
-    
-    .fa-pinterest-p:hover{
-        font-size: 35px;
-        color: black;
-    }
+
+
+/*About us section*/
+	.section{
+		width: 100%;
+		min-height: 100vh;
+		background-color: #ddd;
+	}
+	.container{
+		width: 80%;
+		display: block;
+		margin:auto;
+		padding-top: 100px;
+		margin-top: 70px;
+	}
+	.content-section{
+		float: left;
+		width: 55%;
+	}
+	.image-section{
+		float: right;
+		width: 40%;
+		margin-top: 70px;
+	}
+	.image-section img{
+		width: 100%;
+		height: auto;
+		border-radius: 35px;
+	}
+	.content-section .title{
+		text-transform: uppercase;
+		font-size: 28px;
+	}
+	.content-section .content h3{
+		margin-top: 20px;
+		color:#5d5d5d;
+		font-size: 21px;
+	}
+	.content-section .content p{
+		margin-top: 10px;
+		font-family: sans-serif;
+		font-size: 18px;
+		line-height: 1.5;
+	}
+	.content-section .content .button{
+		margin-top: 30px;
+	}
+
+.button a {
+	border-radius: 15px;
+}
+
+	.content-section .content .button a{
+		background-color: #3d3d3d;
+		padding:12px 40px;
+		text-decoration: none;
+		color:#fff;
+		font-size: 25px;
+		letter-spacing: 1.5px;
+	}
+	.content-section .content .button a:hover{
+		background-color: rgb(61, 43, 226);
+		color:#fff;
+	}
+	.content-section .social{
+		margin: 40px 40px;
+	}
+	.content-section .social i{
+		font-size: 30px;
+		padding:0px 10px;
+	}
+	.content-section .social i:hover{
+		color:#463f3f;
+	}
+	@media screen and (max-width: 768px){
+		.container{
+		width: 80%;
+		display: block;
+		margin:auto;
+		padding-top:50px;
+	}
+	.content-section{
+		float:none;
+		width:100%;
+		display: block;
+		margin:auto;
+	}
+	.image-section{
+		float:none;
+		width:100%;
+	}
+	.image-section img{
+		width: 100%;
+		height: auto;
+		display: block;
+		margin:auto;
+		border-radius: 15px;
+		
+	}
+
+	.content-section .title{
+		text-align: center;
+		font-size: 19px;
+	}
+	.content-section .content .button{
+		text-align: center;
+	}
+	.content-section .content .button a{
+		padding:9px 30px;
+	}
+	.content-section .social{
+		text-align: center;
+	}
+	
+	}
+
+
+
+.facebook{
+color: rgb(77, 77, 236);
+
+}
+
+.twitter{
+color: rgb(76, 238, 238);
+}
+
+.instagram{
+color: rgb(143, 64, 14);
+}
