--- a/assets/about.css
+++ b/assets/about.css
@@ -280,10 +280,23 @@ color: rgb(77, 77, 236);
 
 }
 
+.facebook:hover{
+	color: rgb(15, 15, 15);
+	
+	}
+
 .twitter{
 color: rgb(76, 238, 238);
 }
 
+.twitter:hover{
+	color: rgb(15, 15, 15);
+	}
+
 .instagram{
 color: rgb(143, 64, 14);
 }
+
+.instagram:hover{
+	color: rgb(15, 15, 15);
+	}
