updated all css and image links / pathways and is rendering on github pages now next is to add comments to code then validate all code and then start readme file for submission

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -4,7 +4,7 @@ html{
 }
 
 body {
-    background-image: url("/assets/images/pexels-pixabay-220201.jpg");
+    background-image: url("../assets/images/pexels-pixabay-220201.jpg");
     background-repeat: repeat;
     background-position: center;
     -webkit-background-size: cover;
