--- a/assets/about.css
+++ b/assets/about.css
@@ -42,6 +42,13 @@ nav .links {
 	justify-content: space-around;
 	align-items: center;
 }
+
+#active {
+	border-bottom: 2px solid #000;
+  }
+
+
+
 nav .links li {
 	list-style: none;
 }
@@ -57,6 +64,12 @@ nav .links a:hover {
 	color: rgb(61, 43, 226);
 	font-size: 19px;
 }
+
+.links > li > a:hover {
+	border-bottom-color: #000;
+	border-bottom: 2px solid #000;
+  }
+  
 #nav-toggle {
 	position: absolute;
 	top: -100px;
@@ -120,6 +133,14 @@ nav .icon-burger .line {
 	
 }
 
+
+@media screen and (max-width: 268px){
+	.fa-rocket {
+		display: none;
+		visibility: hidden;
+	}
+}
+/*Navbar Ends*/
 /*---------------------------------------------------------------------------------style for footer*/
 footer{
     height: 10px;
@@ -159,11 +180,16 @@ footer{
     
 
 
+
+/*Footer ENds*/
+
 /*About us section*/
 	.section{
 		width: 100%;
-		min-height: 100vh;
+		min-height: 90vh;
 		background-color: #ddd;
+		margin-top: 150px;
+		border-radius: 30px;
 	}
 	.container{
 		width: 80%;
@@ -172,6 +198,12 @@ footer{
 		padding-top: 100px;
 		margin-top: 70px;
 	}
+
+
+	.about-heading{
+		font-size: 35px;
+	}
+
 	.content-section{
 		float: left;
 		width: 55%;
@@ -185,6 +217,8 @@ footer{
 		width: 100%;
 		height: auto;
 		border-radius: 35px;
+		border-radius: 30px;
+  		box-shadow: 2px 2px 40px rgb(53, 51, 51);
 	}
 	.content-section .title{
 		text-transform: uppercase;
@@ -210,16 +244,16 @@ footer{
 }
 
 	.content-section .content .button a{
-		background-color: #3d3d3d;
+		background-color: rgb(177, 174, 174);
 		padding:12px 40px;
 		text-decoration: none;
-		color:#fff;
-		font-size: 25px;
+		color: black;
+		font-size: 15px;
 		letter-spacing: 1.5px;
 	}
 	.content-section .content .button a:hover{
 		background-color: rgb(61, 43, 226);
-		color:#fff;
+		color:black
 	}
 	.content-section .social{
 		margin: 40px 40px;
@@ -275,28 +309,47 @@ footer{
 
 
 
-.facebook{
-color: rgb(77, 77, 236);
-
-}
-
-.facebook:hover{
-	color: rgb(15, 15, 15);
+	.fa-facebook-square{
+		color: blue;
+		
+	}
 	
+	.fa-facebook-square:hover{
+		font-size: 35px;
+		color: black;
 	}
-
-.twitter{
-color: rgb(76, 238, 238);
-}
-
-.twitter:hover{
-	color: rgb(15, 15, 15);
+	
+	.fa-youtube-square{
+		color: red;
 	}
-
-.instagram{
-color: rgb(143, 64, 14);
-}
-
-.instagram:hover{
-	color: rgb(15, 15, 15);
+	
+	.fa-youtube-square:hover{
+		font-size: 35px;
+		color: black;
+	}
+	
+	.fa-twitter-square{
+		color: rgb(0, 234, 255);
+	}
+	
+	.fa-twitter-square:hover{
+		font-size: 35px;
+		color: black;
+	}
+	.fa-instagram{
+		color: purple;
+	}
+	
+	.fa-instagram:hover{
+		font-size: 35px;
+		color: black;
+	}
+	
+	.fa-pinterest-p{
+		color: green;
+	}
+	
+	.fa-pinterest-p:hover{
+		font-size: 35px;
+		color: black;
 	}
