--- a/assets/contact.css
+++ b/assets/contact.css
@@ -11,7 +11,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: 100%;
-    
+    font-family: sans-serif;
 }
 /*add nav bar style from https://codepen.io/MinzCode/pen/bGexzXw*/
 nav {
